[gd_scene load_steps=7 format=3 uid="uid://blt23jx1cjgjk"]

[ext_resource type="Script" path="res://scripts/Characters/enemy.gd" id="1_3r0m5"]
[ext_resource type="Theme" uid="uid://cvnv7ywm5uieg" path="res://resources/themes/main_theme.tres" id="3_5r1rm"]
[ext_resource type="Texture2D" uid="uid://b1e0i88l5cx2v" path="res://icon.svg" id="3_6e122"]
[ext_resource type="PackedScene" uid="uid://b7l8gpvj4fsua" path="res://scenes/UI/health_bar.tscn" id="3_a6x8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcu3n"]
size = Vector2(16, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_eouem"]
radius = 48.1664

[node name="Enemy" type="StaticBody2D"]
collision_layer = 2
script = ExtResource("1_3r0m5")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_6e122")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tcu3n")

[node name="Vicinity" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vicinity"]
shape = SubResource("CircleShape2D_eouem")

[node name="Ui" type="Control" parent="."]
custom_minimum_size = Vector2(30, 5)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_left = -14.0
offset_top = -31.0
offset_right = 16.0
offset_bottom = -26.0
grow_horizontal = 2

[node name="HealthBar" parent="Ui" instance=ExtResource("3_a6x8q")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
offset_right = 1.0
grow_horizontal = 1

[node name="HealthLabel" type="Label" parent="Ui"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -26.0
offset_top = -12.0
offset_right = -4.0
offset_bottom = -2.0
grow_horizontal = 0
theme = ExtResource("3_5r1rm")
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1

[connection signal="body_entered" from="Vicinity" to="." method="_on_vicinity_body_entered"]
